# pambackendmytake

./: .gitignore  Dockerfile  README.md  alembic.ini  log_config.yml  pyproject.toml  requirements.txt  run_celery.sh  run_celery_beat.sh  start_claude_with_mcp.sh  test_claude_mcp.sh  test_mcp_connection.py  test_mcp_flow.sh  test_mcp_with_claude.sh  update_mcp_config.sh
app/: celery_app.py  celery_db_scheduler.py  config.py  container.py  dependencies.py  main.py  middlewares.py  worker.py
app/api/: __init__.py
app/api/dependencies/: auth.py
app/api/v1/: __init__.py
app/core/: enums.py
app/db/: database.py
app/entities/: __init__.py
app/entities/auth/: user.py
app/entities/base/: __init__.py  base.py
app/gateways/: container.py
app/models/auth/: user.py
app/services/: container.py
migrations/: env.py  utils.py
migrations/versions/: 2025-11-21-15-48-05_initial_a0d035b1c52c_.py  2025-11-25-11-34-18_add_workflows_4e6beafe5d72_.py  2025-11-26-14-14-12_add_run_options_to_workflow_13256d16e561_.py  2025-11-26-15-33-23_add_is_pinned_flag_899eac3559da_.py  2025-11-26-21-25-25_add_workflow_runners_fa0d7fc468ec_.py  2025-11-27-09-45-40_add_integrations_and_user_integrations__6baf7e83555b_.py  2025-12-02-12-01-00_add_composio_entity_id_to_user_5025bfe1c523_.py
src/: constants.py  main.py
src/auth/: auth_dependencies.py  constants.py  exceptions.py  router.py  service.py
src/common/: constants.py  dependencies.py
src/messages/: claude_cli.py  constants.py  exceptions.py  router.py  service.py  utils.py
vm-scripts/: create_client.sh  vm_init.sh
(+70 files in other folders)
