[project]
name = "pam-backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "dependency-injector>=4.48.2",
    "fastapi>=0.121.2",
    "fastapi-mail>=1.5.8",
    "flower>=2.0.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
